--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon ./server/server.js",
+    "dev": "node server.js",
+    "client": "nodemon ./client/script.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
     "websocket": "^1.0.35",
